tests/examples/good/garbage_collector/good100.lat
int main() {
    string[] arr = new string[5];
    return 0;
}

