tests/examples/bad/array_index_not_integer.lat
int main() {
    boolean[] arr;
    arr["index"];
    return 1;
}
